cabal-version: 3.0
name:           statechart-sdk
version:        0.1.1.1
description:    Statechart SDK (Statechart definitions and build tool)
author:         Kronor.io
maintainer:     dev@kronor.io
copyright:      2021 Kronor
license:        NONE
build-type:     Simple

common de
  default-extensions:
    LambdaCase
    DerivingStrategies
    OverloadedStrings
    RecordWildCards
    QuasiQuotes
    ViewPatterns

library
  import: de
  exposed-modules:
      Statechart.CodeGen.Haskell
      Statechart.CodeGen.SQL
      Statechart.CodeGen.Visualization
      Statechart.Helpers
      Statechart.SCXML
      Statechart.Types
  other-modules:
      Paths_statechart_sdk
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.11 && <10
    , bytestring
    , casing
    , containers
    , path
    , path-io
    , regex-tdfa
    , rio >=0.1.12.0
    , string-interpolate
    , template-haskell
    , text
    , time
    , xml-conduit
  default-language: GHC2021

test-suite statechart-sdk-test
  import: de
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      CoreSpec
      Helper
      Plugin.Haskell.Chart1
      Plugin.Haskell.Chart2
      Plugin.Haskell.Chart3
      VisualizationSpec
      Paths_statechart_sdk
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.11 && <10
    , directory
    , file-embed
    , path
    , path-io
    , rio >=0.1.12.0
    , statechart-sdk
    , string-interpolate
    , sydtest
    , sydtest-discover
    , template-haskell
  default-language: GHC2021

executable generate-chart
  main-is:          GenerateChart.hs
  ghc-options:      -main-is GenerateChart.main -O2 -threaded -rtsopts
  hs-source-dirs:   app
  build-depends:
      base            >=4.11     && <10
    , filepath
    , directory
    , optparse-applicative
    , path
    , path-io
    , rio             >=0.1.12.0
    , statechart-sdk  >=0.1.1.1
    , typed-process
  default-language: GHC2021
